Kubernetes/Teleport/traefik-teleport.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-teleport-cluster-basic-auth
  namespace: teleport-cluster
spec:
  basicAuth:
    secret: traefik-teleport-cluster-basic-auth
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-teleport-cluster-https-redirect
  namespace: teleport-cluster
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-teleport-cluster-security
  namespace: teleport-cluster
spec:
  headers:
    frameDeny: true
    sslRedirect: true
    browserXssFilter: true
    contentTypeNosniff: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 31536000
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-teleport-cluster-websecure
  namespace: teleport-cluster
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`teleport.domain.com`,`*.teleport.domain.com`)
      services:
        - name: teleport-cluster
          port: 443
          serversTransport: traefik-teleport-cluster-transport
      middlewares:
        - name: traefik-teleport-cluster-security
  tls:
    secretName: teleport-domain
    options:
      name: traefik-teleport-cluster-tlsoptions
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-teleport-cluster-web
  namespace: teleport-cluster
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`teleport.domain.com`,`*.teleport.domain.com`)
      services:
        - name: teleport-service
          port: 443
      middlewares:
        - name: traefik-teleport-cluster-https-redirect
